--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Shawn Wilcox # your name (or website title) here
+logo: "/images/headshots day 1-9521 edit (2).jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Army Veteran fascinated by technology and how people use it 
   <br><br>
-  Second description 
+  Senior at Seattle Pacific University 
+  Information Systems and Computer Science 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/shawn-wilcox/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
